# DILAB

./: .env.example  .gitignore  CLAUDE.md  FINAL_DELIVERABLES_PLAN.md  METHODOLOGY.md  PRAESI_HANDOFF.md  SPRINT_METHODOLOGY.md  Sprint5_Burndown_EN.xlsx  TALK_TRACK.md  aditest_integration_notes.md  analyze_structure.py  corpus_enrichment_plan.md  differentiation_fix_plan.md  differentiation_fix_results.md  evaluation_grounding_integration.md  experiment_cca.py  localDILABPräsi.pptx  main.py  methodological_progress_report.txt  pipeline_architecture.md  pipeline_explained.tex  prove_domain_agnostic.py  pyproject.toml  requirements-web.txt  research-compilation.md  run_combinatorial.py  run_domain.py  run_full.py  run_morphological.py  sprint-report.md  sprint-report.tex  sprint5-documentation.tex  topic.txt+  ui_audit_fixplan.json
Technology Drivers Identification/: README.md  api.py  requirements.txt  run.py  start.sh
Technology Foresight/: README.md  app.py  requirements.txt
docs/: methodology_note.md  poc2d_sketch.md
knowledge_base/: .gitignore  README.md  fetch.py  make_urls_md.py  manual_downloads.md  sources.json  sources_rs.json  urls.md  urls_rs.md
notebooks/: 01_executed.ipynb  01_knowledge_base.ipynb  02_bom_decomposition.ipynb  02_executed.ipynb  03_executed.ipynb  03_trend_scanning.ipynb  04_executed.ipynb  04_merge_drivers.ipynb  04b_manifestations.ipynb  05_cib_matrix.ipynb  05_executed.ipynb  05b_consistency.ipynb  06_executed.ipynb  06_scenario_generation.ipynb  07_analysis.ipynb  07_executed.ipynb  poc1_cib.ipynb  poc2_rag_surprise.ipynb  (+4 more)
(+286 files in other folders)
