[project]
name = "foresight"
version = "0.1.0"
description = "LLM-augmented strategic technology foresight"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.2,<3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "arxiv>=2.1",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-chroma>=0.2",
    "llama-index-embeddings-huggingface>=0.3",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
    "scikit-learn>=1.4",
    "jupyterlab>=4.5.6",
    "pymupdf>=1.27.2.3",
    "llama-index-embeddings-azure-openai>=0.5.2",
    "requests>=2.33.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
