[project]
name = "dilab"
version = "0.1.0"
description = "AI-Driven Strategic Technology Foresight for R&S Regulatory Frequency Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]

[tool.uv]
constraint-dependencies = ["onnxruntime<1.26.0"]
